--- a/HTML - personal site/index.html
+++ b/HTML - personal site/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> 💚Fasih Personal site💚</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
         <ul>
       </td>
       <td>
+        <h1>FASIH</h1>
         <p><em> I am the student of <strong><a href="https://ssuet.edu.pk/">SSUET</a></strong></em></p>
         <p>I am a web Developer. I 💖 coffee and My heart is too soft </p>
-        <h1>FASIH</h1>
       </td>
     </tr>
   </table>
