--- a/Others.html
+++ b/Others.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>💚Others💚</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
